fix: soft skill results spacing

--- a/components/organisms/SoftSkillResults/SoftSkillResults.scss
+++ b/components/organisms/SoftSkillResults/SoftSkillResults.scss
@@ -13,6 +13,5 @@
 
   &__List {
     display: flex;
-    justify-content: space-between;
   }
 }
